# ipython-gpt

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.rst  Demo.ipynb  LICENSE  README.md  ipython_gpt.py  noxfile.py  pyproject.toml
.github/workflows/: test.yaml
docs/: conf.py  contribute.rst  index.rst  usage.rst
docs/_static/: custom.css
docs/api/: ipython_gpt.rst  modules.rst
ipython_gpt/: __init__.py  api_client.py  displays.py  subcommands.py
tests/: test_api_client.py  test_subcommands.py
