[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "ipython-gpt"
version = "0.0.4"
description = "A Jupyter/IPython extension to use ChatGPT"
authors = ["Santiago Basulto <santiago.basulto@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/santiagobasulto/ipython-gpt"
repository = "https://github.com/santiagobasulto/ipython-gpt"
keywords = ["ipython", "jupyter", "chatgpt", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Framework :: IPython",
    "Programming Language :: Python",
    "Topic :: Utilities",
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"
ipython = "^8.12.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^6.1.3"
sphinx-design = "^0.4.1"
sphinx-copybutton = "^0.5.2"
pydata-sphinx-theme = "^0.13.3"
sphinx-icon = "^0.2.2"
sphinx-btn = "^0.1.2"

