[tool.poetry]
name = "ipython-gpt"
version = "0.0.4"
description = "A Jupyter/IPython extension to use ChatGPT"
authors = ["Santiago Basulto <santiago.basulto@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/santiagobasulto/ipython-gpt"
repository = "https://github.com/santiagobasulto/ipython-gpt"
keywords = ["ipython", "jupyter", "chatgpt", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Framework :: IPython",
    "Programming Language :: Python",
    "Topic :: Utilities",
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"
ipython = "^8.12.0"

[tool.poetry.group.dev.dependencies]
nox = "^2022.11.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
