[tool.poetry]
name = "ipython-gpt"
version = "0.0.5"
description = "A Jupyter/IPython extension to use ChatGPT"
authors = ["Santiago Basulto <santiago.basulto@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/santiagobasulto/ipython-gpt"
repository = "https://github.com/santiagobasulto/ipython-gpt"
keywords = ["ipython", "jupyter", "chatgpt", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Framework :: IPython",
    "Programming Language :: Python",
    "Topic :: Utilities",
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
ipython = "^8.12.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"
pytest = "^7.3.1"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.ruff]
ignore-init-module-imports = true
fix = true
select = ["E", "F", "W", "I", "RUF"] # "D" to be add back before publishing on pypi
ignore = ["E501"]  # line too long | Black take care of it

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.pydocstyle]
convention = "google"
